# TP_2021_Spring

.github/workflows/: cmake.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: index.h  preparing.py
task2/B/: .CMakeLists.txt.swp  CMakeLists.txt
task2/C/: main.cpp  main_test.cpp
task3/: CMakeLists.txt
task3/TechProgSimpleLibrary/: CMakeLists.txt
task3/TechProgSimpleLibrary/src/: CMakeLists.txt
task4/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h  LeapTestCase.cpp  LeapTestCase.h
task4/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task4/tests/03-weather/: WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
